# expert-machine

./: .gitignore  README.md
.github/: copilot-instructions.md
ml-p2/: README.md  environment.yaml  pyproject.toml
ml-p2/ml_p2/: __init__.py  __main__.py
ml-p2/ml_p2/E41/: __main__.py  utils.py
ml-p2/ml_p2/neural_network/: __init__.py  activations.py  ffnn.py  model_comparison.py  optimizer.py
ml-p2/ml_p2/notebooks/: E41.ipynb  examplebook.ipynb
ml-p2/ml_p2/regression/: __init__.py  adagrad.py  adam.py  gradient_descent.py  momentum_gd.py  rmsprop.py  sgd.py
ml-p2/ml_p2/regression/logistic_regression/: __init__.py  logistic_regression.py
ml-p2/ml_p2/tests/: __init__.py  test_logit.py  test_nn_classification.py  test_nn_multiclassification.py  test_nn_regression.py
ml-p2/ml_p2/tests/data/: chddata.csv
ml-p2/ml_p2/utils/: __init__.py  data_generation.py  grid_search_nn.py  metrics.py  repeat_experiment.py
ml-p2/ml_p2/visualization/: __init__.py  classification_plots.py  plotting.py
ml-p2/notebooks/: NN.ipynb  classification.ipynb  logit.ipynb  parta.ipynb  parta_autograd.ipynb
ml-p2/tests/: __init__.py  test_logit.py  test_nn_classification.py  test_nn_regression.py
