[tool.poetry]
name = "ml-p2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
ipython = "^8.26.0"
scikit-learn = "^1.5.1"
mglearn = "^0.2.0"
sympy = "^1.13.2"
pandas = "^2.2.2"
pillow = "^10.4.0"
notebook = "^7.2.2"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
